# operationsgateway-api

./: .flake8  .gitignore  404.html  Dockerfile  FUNCTIONS.md  LICENSE.md  README.md  codecov.yml  docker-compose.yaml  index.html  noxfile.py  objects.inv  pyproject.toml
.github/: ci_config.yml  ci_ingest_echo_config.yml  ci_requirements.txt  ci_s3cfg  dependabot.yml
.github/workflows/: ci.yml  docs.yaml
docs/: dev_server.md  echo_object_storage.md  epac_simulated_data.md  github_actions.md  mkdocs.yml  mongodb.md  poetry_merge_conflicts.md  test_data.md
docs/developer/: backup.md  concurrency.md  dev_server.md  echo_object_storage.md  epac_simulated_data.md  mongodb.md  test_data.md  wavefronts.md
docs/docs/: index.md
docs/docs/functions/: centre.md  fwhm_x.md
docs/user/: index.md
docs/user/functions/: background.md  centroid_x.md  centroid_y.md  falling.md  fwhm.md  fwhm_y.md  integrate.md  rising.md
functions/background/: index.html
functions/centre/: index.html
functions/centroid_x/: index.html
functions/centroid_y/: index.html
functions/falling/: index.html
functions/fwhm/: index.html
functions/fwhm_x/: index.html
functions/fwhm_y/: index.html
functions/integrate/: index.html
functions/rising/: index.html
operationsgateway_api/: config.yml.example  logging.ini.example  maintenance.json.example  scheduled_maintenance.json.example
operationsgateway_api/src/: central_authentication_list.py  config.py  constants.py  data_encoding.py  error_handling.py  exceptions.py  hdf_handler.py  helpers.py  logger_config.py  main.py  models.py  routes.py  runner_abc.py
test/: conftest.py  mock_models.py  pytest.ini.example  pytest_epac.ini.example  pytest_gemini.ini.example  test_config_fails.py  test_exception_code.py  test_models.py
test/auth/: conftest.py  test_auth_keys.py  test_authentication.py  test_email_from_fedid.py  test_jwt_handler.py  test_oidc.py  test_oidc_handler.py  test_user_is_admin.py  test_user_unauthorised.py
test/backup/: test_backup_runner.py
test/channels/: conftest.py  test_channel_manifest.py  test_manifest_validator.py
test/endpoints/: conftest.py  test_add_users.py  test_auth.py  test_channel_summary.py  test_count_records.py  test_delete_record.py  test_delete_users.py  test_export.py  test_get_channel_by_name.py  test_get_channels.py  test_get_colour_bar_image.py  test_get_colourmap_names.py  test_get_crosshair_intensity.py  test_get_experiments.py  test_get_float_image.py  test_get_function_tokens.py  test_get_image.py  test_get_image_from_function.py  test_get_nullable_image.py  test_get_oidc_providers.py  test_get_record_by_id.py  test_get_records.py  test_get_users.py  test_get_vector.py  test_get_waveform_by_id.py  test_get_waveform_from_function.py  test_maintenance.py  test_manifest.json  test_oidc_login.py  test_post_experiments.py  test_range_converter.py  test_submit_hdf.py  test_submit_manifest.py  test_update_users.py  test_user_preferences.py  test_validate_function.py  test_version.py
test/experiments/: test_background_runner.py  test_duplicate_part_selector.py  test_experiment.py  test_rest_error_handling.py  test_scheduler_interface.py  test_soap_error_handling.py  test_unique_worker.py
test/export/: 20230605070600_to_20230605120000.csv  20230605080000.csv  20230605080000123.csv  20230605080000123_to_20230605080300234.csv  20230605080000123_to_20230605080300234_ASTRA_CONTROL_MODE_STRING.csv  20230605080000123_to_20230605080300234_FE-204-PSO-EM.csv  20230605080000123_to_20230605080300234_ID.csv  20230605080000123_to_20230605080300234_desc.csv  20230605080000123_to_20230605080300234_functions.csv  20230605080000123_to_20230605080300234_incl_id.csv  20230605080000123_to_20230605170000345.csv  20230605080000_FE-204-PSO-P1-SP.csv  20230605080000_to_20230605080300.csv  20230605080000_to_20230605080300_ASTRA_CONTROL_MODE_STRING.csv  20230605080000_to_20230605080300_FE-204-PSO-EM.csv  20230605080000_to_20230605080300_ID.csv  20230605080000_to_20230605080300_desc.csv  20230605080000_to_20230605080300_functions.csv  20230605080000_to_20230605080300_incl_id.csv  20230605080000_to_20230605120000_FE-204-PSO-EM.csv  20230605080000_to_20230605120000_ID.csv  20230605080000_to_20230605120000_asc.csv  20230605080000_to_20230605120000_asc_incl_id.csv  20230605080000_to_20230605120000_desc.csv  20230605080000_to_20230605120000_functions.csv  20230605080000_to_20230605170000.csv  20230605080300.csv  20230605080300234.csv  20230605080300234_no_channels.csv  20230605080300_FE-204-LT-WFS-COEF.csv  20230605080300_FE-204-NSS-WFS-COEF.csv  20230605080300_FE-204-PSO-P1-SP.csv  20230605080300_no_channels.csv  20230605090000_FE-204-PSO-P1-SP.csv  20230605100000_FE-204-PSO-P1-SP.csv  20230605100000_to_20230605110000_desc_s_l.csv  20230605110000_FE-204-PSO-P1-SP.csv  20230605120000_FE-204-PSO-P1-SP.csv  EXPORT_ERRORS.txt  GEMINI_EXPORT_ERRORS.txt
test/functions/: test_expression_transformer.py  test_waveform_variable.py
test/images/: test_colourmap_mapping.py  test_colournap_mapping.py  test_false_colour_handler.py  test_false_colour_image_errors.py  test_float_image.py  test_image.py  test_nullable_image.py
test/mongo/: test_mongo_error_handling.py
test/records/: conftest.py  test_HDF_file.py  test_echo_interface.py  test_export_handler.py  test_false_colour_handler.py  test_false_colour_image_errors.py  test_hdf_handler.py  test_image.py  test_record.py  test_record_retriever.py  test_thumbnail_handler.py  test_waveform.py
test/sessions/: mock_models.py  test_user_session.py  test_user_session_list.py
test/users/: test_favourite_filter.py
util/: docker-compose.yaml  generate_plot_hdf.py  ingest_hdf.py  move_objects.py  og_api_postman_collection.json  testrealm.json  thumbnail_md5_converter.py  thumbnail_phash_converter.py  users_for_mongoimport.json
util/backup/: x_root_d_util.py
util/realistic_data/: Dockerfile.testdata  README.md  calendar_conversion.py  config.yml.example  daily_ingestor.py  file_count_check.sh  generation.sh  ingest_echo_data.py  init_mongo.js  kill_api.py
(+142 files in other folders)
