[tool.poetry]
name = "operationsgateway-api"
version = "0.5.0"
description = ""
readme = "README.md"
authors = [
    "Matthew Richards <matthew.richards@stfc.ac.uk>",
    "Patrick Austin <patrick.austin@stfc.ac.uk>",
    "Alexander Kemp <matthew.richards@stfc.ac.uk>"
]

[tool.poetry.dependencies]
# Note that python3.12 is only compatible with scipy>=1.11.3
# but python3.8 is only compatible with scipy<=1.10.1
# so it is not possible to target both at the same time
python = ">=3.11,<3.12"
fastapi = "^0.116.1"
motor = "^3.3.2"
uvicorn = "^0.20.0"
python-multipart = "^0.0.18"
PyYAML = "^6.0"
ImageHash = "4.3.1"
# scipy is a dependency of ImageHash but is listed to mitigate
# a vulnerability in scipy version 1.9.3
scipy = "^1.10.0"
numpy = "^1.23.1"
h5py = "^3.7.0"
Pillow = "^10.3.0"
matplotlib = "^3.5.2"
gunicorn = "^23.0.0"
orjson = "^3.10.3"
python-dateutil = "^2.8.2"
email-validator = "^2.1.1"
PyJWT = "2.10.1"
cryptography = "^44.0.1"
python-ldap = "3.4.2"
cron-converter = "^1.0.1"
zeep = "^4.2.1"
# Indirect dependency lxml 5.1.0 causes symbol not found in flat namespace '_exsltDateXpathCtxtRegister' error
lxml = "5.0.1"
httpx = "^0.28.1"
lark = "1.1.9"
elastic-apm = "^6.23.0"
aioboto3 = "^13.0.0"
aiobotocore = ">=2.16.0, <2.17.0"
mypy-boto3-s3 = "^1.40.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^4.0.1"
flake8-black = "^0.2.1"
flake8-broken-line = "0.4.0"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.3.0"
flake8-import-order = "^0.18.1"
flake8-logging-format = "^0.6.0"
pep8-naming = "^0.12.1"
safety = "^3.5.2"
pytest = "^7.2.0"
requests = "2.32.4"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
fabric = "^3.1.0"
pytest-asyncio = "^0.21.0"
s4cmd = "^2.1.0"

[tool.poetry.group.simulated-data.dependencies]
epac-data-sim = {git = "git@github.com:CentralLaserFacility/EPAC-DataSim.git"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.14.5"

[tool.coverage.paths]
source = ["operationsgateway_api"]

[tool.coverage.run]
branch = true
source = ["operationsgateway_api"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
