[tool.poetry]
name = "operationsgateway-api"
version = "1.1.1"
description = ""
readme = "README.md"
authors = [
    "Matthew Richards <matthew.richards@stfc.ac.uk>",
    "Patrick Austin <patrick.austin@stfc.ac.uk>",
    "Alexander Kemp <matthew.richards@stfc.ac.uk>"
]

[tool.poetry.dependencies]
# Note that python3.12 is only compatible with scipy>=1.11.3
# but python3.8 is only compatible with scipy<=1.10.1
# so it is not possible to target both at the same time
python = ">=3.11,<3.12"
fastapi = ">=0.123,<0.138"
motor = "^3.3.2"
uvicorn = ">=0.20,<0.50"
python-multipart = ">=0.0.27,<0.0.33"
PyYAML = "^6.0"
ImageHash = "4.3.2"
# scipy is a dependency of ImageHash but is listed to mitigate
# a vulnerability in scipy version 1.9.3
scipy = "^1.10.0"
numpy = "^1.23.1"
h5py = "^3.7.0"
Pillow = "^12.2.0"
matplotlib = "^3.5.2"
gunicorn = ">=23,<27"
orjson = "^3.11.6"
python-dateutil = "^2.8.2"
email-validator = "^2.1.1"
PyJWT = "2.13.0"
cryptography = ">=46.0.5,<50.0.0"
python-ldap = "3.4.7"
cron-converter = "^1.0.1"
zeep = "^4.2.1"
lxml = "^6.1.1"
httpx = "^0.28.1"
lark = "1.3.1"
elastic-apm = "^6.23.0"
aioboto3 = "^13.0.0"
aiobotocore = ">=2.16.0, <2.17.0"
mypy-boto3-s3 = "^1.40.0"
async-lru = "^2.0.5"
cachetools = ">=6.2,<8.0"
authlib = "^1.7.2"
urllib3 = "^2.7.0"
fonttools = "^4.63.0"
xrootd-utils = "^0.1.0"
aiohttp = "^3.13.5"
starlette = ">=0.49.1,<1.4.0"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = ">=5.0.4,<8.0.0"
flake8-black = "^0.4.0"
flake8-bugbear = ">=22.4.25,<26.0.0"
flake8-builtins = ">=1.5.3,<4.0.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.3.0"
flake8-import-order = "^0.19.2"
pep8-naming = ">=0.12.1,<0.16.0"
safety = "^3.5.2"
pytest = ">=7.2,<10.0"
requests = "2.34.2"
pytest-cov = ">=3,<6"
coverage = ">=6.4.4,<8.0.0"
fabric = "^3.1.0"
pytest-asyncio = ">=0.21,<1.5"
s4cmd = "^2.1.0"
pytest-mock = "^3.14.1"

[tool.poetry.group.simulated-data.dependencies]
epac-data-sim = {git = "git@github.com:CentralLaserFacility/EPAC-DataSim.git"}


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = ">=1.14.5,<3.0.0"

[tool.coverage.paths]
source = ["operationsgateway_api"]

[tool.coverage.run]
branch = true
source = ["operationsgateway_api"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
